# ai_personal_multi_agent

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ai/: cli.py  errors.py  ledger.py  logging.py  settings.py
src/ai/providers/: base.py  claude.py  embeddings.py  gemini.py  openai.py
src/ai/vault/: __init__.py  indexer.py  models.py  retriever.py
tests/: test_cli.py  test_ledger.py  test_ledger_schema.py  test_providers.py  test_settings.py  test_vault.py
