[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-multi-agents"
version = "0.1.0"
description = "Terminal-first multi-agent LLM system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12",
  "pydantic-settings>=2.0",
  "loguru>=0.7",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.5.0",
  "mypy>=1.6",
  "pre-commit>=3.5",
]

[project.scripts]
ai = "ai.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["ai", "ai.providers", "ai.vault"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
